--- a/Yggdrasil/Pages/Study/Homework.cshtml
+++ b/Yggdrasil/Pages/Study/Homework.cshtml
@@ -5,45 +5,45 @@
 }
 
 
-@for (int i = 0; i < Model.Subjects.Count; i++)
+@for (int i = 0; i < Model.Input.Count; i++)
 {
-    <h2>@Model.Subjects[i].Name</h2>
-    <form id="homework-finished-form" method="post" asp-page="Homework">
-        
-        @{ List<Homework> homeworks = Model.Subjects[i].Homeworks as List<Homework>; }
-        @for (int j = 0; j < Model.Subjects[i].Homeworks.Count; j++)
-        {
-            <table class="table">
-                <thead>
+    <h2>@Model.Input[i].Name</h2>
+
+    @for (int j = 0; j < Model.Input[i].Homeworks.Count; j++)
+    {
+        <table class="table">
+            <thead>
                 <tr>
                     <th scope="col">Задание</th>
                     <th scope="col">Дедлайн</th>
                     <th scope="col">Сделано?</th>
                 </tr>
-                </thead>
-                <tbody>
+            </thead>
+            <tbody>
                 <tr>
-                    <td>@Model.Subjects</td>
-                    <td>@homeworks[j].Deadline</td>
+                    <td>@Model.Input[i].Homeworks[j].Description</td>
+                    <td>@Model.Input[i].Homeworks[j].Deadline</td>
                     <td>
-                        @if (homeworks[j].Finished)
-                        {
-                            <input asp-for="@homeworks[j].Finished" class="form-check-input" type="checkbox">
-                        }
-                        else
-                        {
-                            <input asp-for="@homeworks[j].Finished" class="form-check-input" type="checkbox">
-                        }
-                        <input type="hidden" asp-for="@homeworks[j].Deadline"/>
-                        <input type="hidden" asp-for="@homeworks[j].Description"/>
-                        <input type="hidden" asp-for="@homeworks[j].Id"/>
-                        <input type="hidden" asp-for="@homeworks[j].Subject"/>
+                        <form method="post">
+                            @if (Model.Input[i].Homeworks[j].Finished)
+                            {
+                                <input class="form-check-input" type="checkbox" readonly="readonly" checked>
+                            }
+                            else
+                            {
+                                <input class="form-check-input" type="checkbox" readonly="readonly">
+                            }
+
+                        </form>
                     </td>
                 </tr>
-                </tbody>
-            </table>
+            </tbody>
+        </table>
+        <form method="get">
+            <input type="submit" class="btn primary-btn" asp-page="HomeworksUpdate" asp-route-id="@Model.Input[i].Homeworks[j].Id" asp-route-subjectname="@Model.Input[i].Homeworks[j].Id" value="Изменить"/>
+        </form>
+        <button class="btn primary-btn">Удалить</button>
+    }
 
-        }
-        <input class="btn primary-button" type="submit"/>
-    </form>
+
 }
