--- a/Yggdrasil/Pages/_Layout.cshtml
+++ b/Yggdrasil/Pages/_Layout.cshtml
@@ -5,7 +5,10 @@
     <meta charset="utf-8"/>
     
     <meta name="viewport" content="width=device-width"/>
-    <link href="/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link asp-append-version="true" href="/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <script asp-append-version="true"  src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+    <script asp-append-version="true" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.js"></script>
+    <script asp-append-version="true" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.js"></script>
 </head>
 <body>
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
